package com.company.exceptions;

public class InputException extends Exception{
    //TODO Exception
}
